# AI_Account_Hub

./: .gitattributes  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  Start-AI-Account-Hub.bat  conftest.py  main.py  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: build-windows.yml
Docs/: ANTIGRAVITY_ACCOUNT_SETUP.md  ARCHITECTURE.md  PORTING_MACOS_LINUX.md  RELEASE_HYGIENE.md
_disabled/: README.md  coding_bridge.py
_disabled/coding_screen/: blocks.py  helpers.py  screen.py  threads.py
_disabled/harness/: __init__.py  history_codex.py  locators.py  transports.py
ai_account_hub/: README.md  __init__.py  __main__.py  app.py  data.py  demo_data.py  engine.py  engine_claude_desktop.py
docs/: ARCHITECTURE.md  CLAUDE_ACCOUNT_SETUP.md  CODEX_ACCOUNT_SETUP.md  COMMUNITY_TELEMETRY_SECURITY_PLAN.md  CURSOR_ACCOUNT_SETUP.md  PORTING_MACOS_LINUX.md  PROVIDER_DISCOVERY.md  REAL_WORLD_USAGE_ANALYTICS.md
outputs/: claude-desktop-login-audit.md  codex-account-launcher-readme.md  codex-account-launcher.ps1  codex-multi-account-audit.md  native-harness-passthrough-audit.md  run-codex-account-launcher.cmd  runcodex.bat  unified-coding-workbench-audit.md
packaging/: AI-Account-Hub.spec
prototypes/: custom-notification-concepts.html  system-tray-widget-concepts.html
screenshots/: README.md
scripts/: build-windows.ps1  codex-account-limits-helper.mjs  codex-rate-limit-normalizer.mjs
tests/: _qt_common.py  test_claude_desktop.py  test_native_harness.py  test_provider_discovery.py  test_qt_port.py
work/: probe-codex-account-limits.mjs
(+115 files in other folders)
