[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-account-hub"
version = "1.0.0"
description = "Windows-first desktop dashboard and passthrough launcher for multiple AI coding accounts (Codex, Claude Code, Cursor, Antigravity)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "AlexC1991" }]
dependencies = ["PySide6>=6.8,<7"]

[project.urls]
Homepage = "https://github.com/AlexC1991/AI_Account_Hub"

[project.gui-scripts]
ai-account-hub = "ai_account_hub.app:main"

[tool.setuptools.packages.find]
include = ["ai_account_hub*"]
